WebCore/html/HTMLGenericFormElement.cpp
@@ -216,6 +216,14 @@ HTMLFormElement* HTMLGenericFormElement::virtualForm() const
     return m_form;
 }
 
+void HTMLGenericFormElement::removeFromForm()
+{
+    if (!m_form)
+        return;
+    m_form->removeFormElement(this);
+    m_form = 0;
+}
+
 HTMLFormControlElementWithState::HTMLFormControlElementWithState(const QualifiedName& tagName, Document* doc, HTMLFormElement* f)
     : HTMLGenericFormElement(tagName, doc, f)
 {
